2.3/files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-service
  namespace: hw2-3
spec:
  type: NodePort
  selector:
    app: main
  ports:
    - name: http-nginx
      port: 80
      targetPort: 80
      nodePort: 32000
      protocol: TCP
    - name: http-app-multitool
      port: 8080
      targetPort: 8082
      nodePort: 32001
      protocol: TCP
